kubernetes18/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: login-svc
  labels:
    app: login-svc-app
spec:
  type: ClusterIP
  selector:
    app: login 
  ports:
    - port: 80
      protocol: TCP      


---
apiVersion: v1
kind: Service
metadata:     
  name: catalog-svc
  labels:
    app: catalog-svc-app
spec:  
  type: ClusterIP
  selector: 
    app: catalog
  ports:
    - port: 80
      protocol: TCP 


---
apiVersion: v1
kind: Service
metadata:     
  name: basket-svc
  labels:
    app: basket-svc-app
spec:  
  type: ClusterIP
  selector:
    app: basket
  ports:
    - port: 80
      protocol: TCP


---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
  labels:
    app: order-svc-app
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - port: 80
      protocol: TCP
